Updating swagger with the new routes
