# horusec-auth/internal/handler/health/health.go
@@ -15,9 +15,10 @@
 package health
 
 import (
+	netHTTP "net/http"
+
 	"github.com/ZupIT/horusec/development-kit/pkg/databases/relational"
 	EnumErrors "github.com/ZupIT/horusec/development-kit/pkg/enums/errors"
-	netHTTP "net/http"
 
 	_ "github.com/ZupIT/horusec/development-kit/pkg/entities/http" // [swagger-import]
 	httpUtil "github.com/ZupIT/horusec/development-kit/pkg/utils/http"
@@ -47,7 +48,7 @@ func (h *Handler) Options(w netHTTP.ResponseWriter, _ *netHTTP.Request) {
 // @Produce  json
 // @Success 200 {object} http.Response{content=string} "OK"
 // @Failure 500 {object} http.Response{content=string} "INTERNAL SERVER ERROR"
-// @Router /api/health [get]
+// @Router /auth/health [get]
 func (h *Handler) Get(w netHTTP.ResponseWriter, _ *netHTTP.Request) {
 	if !h.postgresRead.IsAvailable() || !h.postgresWrite.IsAvailable() {
 		httpUtil.StatusInternalServerError(w, EnumErrors.ErrorDatabaseIsNotHealth)
