# horusec-webhook/internal/handlers/health/health.go
@@ -46,7 +46,7 @@ func (h *Handler) Options(w netHTTP.ResponseWriter, r *netHTTP.Request) {
 // @Produce  json
 // @Success 200 {object} http.Response{content=string} "OK"
 // @Failure 500 {object} http.Response{content=string} "INTERNAL SERVER ERROR"
-// @Router /api/health [get]
+// @Router /webhook/health [get]
 func (h *Handler) Get(w netHTTP.ResponseWriter, r *netHTTP.Request) {
 	if !h.broker.IsAvailable() {
 		httpUtil.StatusInternalServerError(w, EnumErrors.ErrorBrokerIsNotHealth)
